# DonCEy-Kong-Jr.

./: .gitignore  .gitmodules  README.md  SimpleServer.java
Cliente/: CMakeLists.txt  constants.c  constants.h  main.c  sdl3.c  socket_thread.c  socket_thread.h
Cliente/widgets/: button.c  button.h  crocodile.c  crocodile.h  fruit.c  fruit.h  input_field.c  input_field.h
Servidor/src/: Main.java  Server.java
Servidor/src/App/: Main.java
Servidor/src/GUI/: AdminPanel.java  AdminScreen.java  MainScreen.java  NewGameScreen.java  SpectatorScreen.java  TemplateScreen.java
Servidor/src/character/: DonkeyKongJr.java
Servidor/src/factory/: enemy.java  fruit.java  vidas.java
Servidor/src/factory/enemies/: BlueCrocodile.java  RedCrocodile.java
Servidor/src/factory/fruits/: Apple.java  Banana.java  Peach.java
Servidor/src/observer/: Player.java  Server.java  Subscriber.java  SubscriberType.java  Viewer.java
untitled2/: CMakeLists.txt  main.c
